kubernetes/cms-draft_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-draft
  annotations:
    traefik.backend.loadbalancer.sticky: "true"
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: cms-draft
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cms-draft
spec:
  rules:
  - host: cms-draft.project-r.space
    http:
      paths:
      - backend:
          serviceName: cms-draft
          servicePort: 80
